# mfa_authentication_factor_v0.1

./: LICENSE  README.md
MFAEngine/: package-lock.json  pyproject.toml  requirements.txt
MFAEngine/apps/api/: admin.py  apps.py  models.py  serializers.py  views.py
MFAEngine/apps/api/migrations/: 0001_initial.py  0002_rename_app_myapp.py  0003_rename_myapp_app.py  0004_auto_20210901_2111.py  0005_alter_app_id.py  0006_alter_backupcode_options.py  0007_tokenconfig_secret_tag.py  0008_auto_20210902_1159.py  0009_auto_20210904_1705.py  0010_auto_20210904_1729.py  0011_userenrolled_factory.py  0012_auto_20210904_2054.py  0013_auto_20210904_2101.py  0014_userenrolled_secret.py  0015_delete_tokenconfig.py
MFAEngine/apps/dashboard/: decorators.py
MFAEngine/apps/factors/: totp.py
MFAEngine/apps/management/: admin.py  apps.py  conf.py  insert_log_into_database.py  middleware.py  models.py  router.py  start_logger_when_server_starts.py  views.py
MFAEngine/apps/management/middleware/: api_logger_middleware.py
MFAEngine/apps/management/migrations/: 0001_initial.py  0002_registered_user.py  0003_alter_registered_user_options.py
MFAEngine/apps/self_service/: admin.py  apps.py  models.py  service_forms.py  views.py
MFAEngine/apps/self_service/migrations/: 0001_initial.py  0002_auto_20210917_0902.py  0003_alter_profile_username.py  0004_alter_applicationrequest_status.py
MFAEngine/apps/users/: admin.py  forms.py  models.py  views.py
MFAEngine/apps/users/migrations/: 0001_initial.py  0006_alter_user_email.py  (+4 more)
MFAEngine/config/: asgi.py  settings.py  urls.py  wsgi.py
(+12 files in other folders)
