[tool.poetry]
name = "mfaserver"
version = "0.1.0"
description = ""
authors = ["bl4ckbo7 <andykawa3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
wheel = "^0.37.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
